# Packers-FirstRepo

./: .gitignore  Area.cpp  Area.h  CMakeLists.txt  Console.cpp  Console.h  ConsoleAdjustments.cpp  ConsoleAdjustments.h  Infobars.cpp  Infobars.h  LICENSE.md  Menus.cpp  Menus.h  Packer.cpp  Packer.h  Packers.7z  Packers.cpp  Packers.h  Packers.rc  Packers.sln  Packers.vcxproj  Packers.vcxproj.filters  README.md  Shared.cpp  Shared.h  Status.cpp  Status.h  Surround.cpp  Surround.h  Tale.cpp  Tale.h  Z_OldCodes.cpp  Z_OldCodes.h  aGiant  pch.cpp  pch.h  resource.h
DLLs/: ConsoleAdjustments.lib  ConsoleAdjustments.xdc  ConsoleAdjustments.xml
DLLs_x64/: ConsoleAdjustments.lib
